2005-08-19 Katsutoshi Itoh <cut-sea@timedia.co.jp>
	* src/kauha/config.scm.in
	Add new slot into kahua-custom.
	The new slot name is secure-sandbox,
	which can take value #f or the other.

	* src/kahua/sandbox.scm
	A value #f means we can make insecure sandbox.

2005-08-17 Katsutoshi Itoh <cut-sea@timedia.co.jp>
	* src/kahua/plugin.scm
	take care of a module which include export-all like as sxml.ssax.

2005-08-17  ENDO Yasuyuki <yasuyuki@javaopen.org>
	
	* Release 0.3.3
	Supported FastCGI.

2005-08-13  SHIBATA Tomohisa  <shibata@timedia.co.jp>

	* src/kahua/server.scm:
	Fixed quasiquote miss(RSS).
	Improved encoding check(RSS).

2005-08-06  Nobuo Yamashita  <nobsun@sampou.org>

	* src/Makefile.in:
	modified in order to install src/kahua/error-report.scm.

2005-08-06  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/error-report.scm, src/kahua.scm, src/kahua/sandbox.scm:
	added error report system which handles exception occured in kahua
	applicatoin and logs these exceptions to kahua-spvr.log.
	we can use it with (kahua-error-proc kahua-error-report-proc).

	* cgi/fix-shebang.sh: 
	modified to generate a fastcgi script.
	* configure.ac, cgi/Makefile.in:
	added a configure option '--with-fastcgi'.

	* src/kahua-server.scm (kahua-add-hook!, kahua-delete-hook!): 
	added hook function, which is called whenever before and/or after
	processing a request to kahua applications.

2005-07-20  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua.cgi.in (cgi-error-page):
	modified to take only message argument.

	* cgi/kahua.cgi.in (cgi-error-proc):
	modified to log error detail.

	* cgi/kahua.cgi.in (main):
	modified to error handling to avoid anoying error output was 
	taken by Apache.

2005-07-14  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-spvr.scm, src/kahua/config.scm.in:
	Enabled to record kahua-spvr's process id in 
	work-directory/kahua-spvr.pid 
	

2005-07-14  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua.cgi.in:
	added SIGPIPE handling.
	